<resources>
    <string name="app_name">Cataloger</string>
    <string name="app_motto">Simple, Fast &amp; Flexible</string>
    <string name="title_activity_category_list_screen">Lista kategorii</string>
    <string name="title_activity_element_list_screen">Lista elementów</string>
    <string name="title_activity_create_template_screen">Stwórz wzór elementu</string>
    <string name="title_activity_create_category_screen">Stwórz kategorię</string>
    <string name="title_activity_create_element_screen">Stwórz element</string>
    <string name="title_activity_edit_element_screen">Edytuj element</string>
    <string name="title_activity_edit_category_screen">Edytuj kategorię</string>
    <string name="title_activity_edit_template_screen">Edytuj wzór elementu</string>
    <string name="title_activity_element_information_screen">Informacje o elemencie</string>
    <string name="title_activity_template_list_screen">Lista wzorów</string>
    <string name="credits_title">Informacje</string>

    <string name="catalog_button_text">Kategorie</string>
    <string name="todo_button_text">Lista - To Do</string>
    <string name="template_button_text">Wzory</string>
    <string name="credits_button_text">O Aplikacji</string>
    <string name="exit_button_text">Wyjście</string>

    <string name="author_text_view">Autor:</string>
    <string name="app_version_text_view">Wersja aplikacji:</string>
    <string name="author_PG">Patryk Gałąska</string>
    <string name="version">v 1.1</string>
    <string name="back_button">Powrót</string>
    <string name="email_address_title">Adres e-mail:</string>
    <string name="email_Address">patrgal311@student.polsl.pl</string>

    <string name="choose_from_gallery">Wybierz z galeri</string>
    <string name="make_photo">Zrób zdjęcie</string>
    <string name="edit">Edytuj</string>
    <string name="add">Dodaj</string>
    <string name="delete">Usuń</string>
    <string name="name">Nazwa</string>
    <string name="category">Kategoria</string>
    <string name="elements">Elementy</string>
    <string name="searchOption">Szukaj</string>
    <string name="sort">Sortuj</string>
    <string name="filter">Filtruj</string>

    <string name="name_label">Nazwa</string>
    <string name="element_photo">Zdjęcie przedmiotu</string>
    <string name="cancel_button">Anuluj</string>
    <string name="accept_button">Zatwierdź</string>
    <string name="category_title">Kategoria</string>
    <string name="rating_label">Ocena</string>
    <string name="additional_information">Informacje dodatkowe</string>
    <string name="delete_element">Usuń element</string>
    <string name="adding_information">Dodawanie informacji</string>
    <string name="category_type">Zawartość kategorii</string>
    <string name="category_name">Nazwa kategorii</string>
    <string name="choose_template_element">Wybierz wzór dla kategorii</string>
    <string name="add_to_todo_list">Dodaj do listy TODO</string>
    <string name="back_to_category">Przenieś do kategori</string>

    <string name="addNewTemplate">Nie wybrano</string>
    <string name="noTemplate">Dodaj nowy wzór</string>
    <string name="noNameEntered">Nie wprowadzono nazwy wzoru</string>
    <string name="noCategoryName">Wprowadz nazwę kategorii</string>
    <string name="noElementName">Wprowadz nazwę elementu</string>
    <string name="example_Text">Przykladowy Tekst</string>
    <string name="options">Opcje</string>

    <string name="deleted_category_list">Usunięta liczba kategorii</string>
    <string name="deleted_template_list">Usunięta liczba wzorów</string>
    <string name="deleted_element_list">Usunięta liczba elementów</string>
    <string name="deleted_category">Usunięta kategorię</string>
    <string name="deleted_template">Usunięta wzór</string>
    <string name="deleted_element">Usunięto element</string>
    <string name="added_element">Dodano element</string>
    <string name="added_category">Dodano kategorię</string>
    <string name="added_template">Dodano wzór</string>
    <string name="ascending">Rosnące</string>
    <string name="descending">Malejące</string>
    <string name="sorting_type">Typ sortowania</string>
    <string name="sort_by">Sortuj po</string>
    <string name="moved">Przeniesiono</string>
    <string name="edited">Edytowano</string>
    <string name="filter_by">Filtruj po</string>
    <string name="value">Wartość</string>
    <string name="none">Brak</string>
    <string name="export_category">Eksportuj kategorię</string>
    <string name="export_todo">Eksportuj listę TODO</string>
    <string name="saved_file">Zapisano plik</string>
    <string name="saved_error_file">Nie udało się zapisać pliku</string>
    <string name="in_download">w folderze "Downloads"</string>
    <string name="from">z</string>

    <string name="template_book">Książka</string>
    <string name="template_book_author">Autor</string>
    <string name="template_book_publisher">Wydawnictwo</string>
    <string name="template_book_year">Rok wydania</string>
    <string name="template_book_binding">Rodzaj oprawy</string>
    <string name="template_book_pages">Ilośc stron</string>

    <string name="template_movie">Film</string>
    <string name="template_movie_genre">Gatunek</string>
    <string name="template_movie_time">Czas trwania (min)</string>
    <string name="template_movie_director">Reżyseria</string>
    <string name="template_movie_scenario">Scenariusz</string>
    <string name="template_movie_country">Kraj produkcji</string>
    <string name="template_movie_year">Rok produkcji</string>

    <string name="template_music">Muzyka</string>
    <string name="template_music_artist">Wykonawca</string>
    <string name="template_music_genre">Gatunek</string>
    <string name="template_music_time">Czas trwania (min)</string>
    <string name="template_music_year">Rok nagrania</string>
    <string name="template_music_carrier">Nośnik</string>

</resources>
