<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="84dp"
        android:fontFamily="monospace"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mottoText">

        <Button
            android:id="@+id/catalogButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="categoryScreenShow"
            android:text="@string/catalog_button_text"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/todoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="todoScreenShow"
            android:text="@string/todo_button_text"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/templateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="templateScreenShow"
            android:text="@string/template_button_text"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/creditsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="creditsScreenShow"
            android:text="@string/credits_button_text" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="exitButton"
            android:text="@string/exit_button_text" />
    </LinearLayout>

    <TextView
        android:id="@+id/mottoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/app_motto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

</android.support.constraint.ConstraintLayout>