<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageButton
        android:id="@+id/editNameElement"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="3dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/edit"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/elementText"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/edit" />

    <TextView
        android:id="@+id/elementNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="20dp"
        android:text="@string/name_label"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/elementImage"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/elementImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="@string/element_photo"
        android:focusable="true"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/add_photo" />

    <ImageView
        android:id="@+id/deletePhotoButton"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:contentDescription="@string/exit_button_text"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/elementImage"
        app:layout_constraintTop_toTopOf="@+id/elementImage"
        app:srcCompat="@drawable/delete" />

    <Button
        android:id="@+id/cancleButtonTemplate"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="10dp"
        android:text="@string/cancle_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/acceptButtonTemplate"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="10dp"
        android:text="@string/accept_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/elementText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:text="@string/example_Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/elementImage"
        app:layout_constraintTop_toBottomOf="@+id/elementNameText" />

    <TextView
        android:id="@+id/categoryNameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="13dp"
        android:text="@string/category_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/elementImage"
        app:layout_constraintTop_toBottomOf="@+id/elementText" />

    <TextView
        android:id="@+id/categoryText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:text="@string/example_Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/elementImage"
        app:layout_constraintTop_toBottomOf="@+id/categoryNameText" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="13dp"
        android:text="@string/rating_label"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/elementImage"
        app:layout_constraintTop_toBottomOf="@+id/categoryText" />

    <TextView
        android:id="@+id/addtionalInformationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/additional_information"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/elementImage" />

    <ListView
        android:id="@+id/featureList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/cancleButtonTemplate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addtionalInformationText" />

    <ImageButton
        android:id="@+id/addFeatureButton"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/adding_information"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/featureList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editNameElement"
        app:srcCompat="@drawable/add_note" />

    <RatingBar
        android:id="@+id/ratingBarElement"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="160dp"
        android:layout_height="24dp"
        android:layout_marginStart="13dp"
        android:isIndicator="false"
        android:numStars="10"
        android:rating="10"
        android:stepSize="1"
        app:layout_constraintStart_toEndOf="@+id/elementImage"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

</android.support.constraint.ConstraintLayout>