<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/acceptButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="88dp"
        android:text="@string/accept_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/templateSpinner" />

    <Button
        android:id="@+id/cancleButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="18dp"
        android:text="@string/cancle_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/templateSpinner" />

    <RadioGroup
        android:id="@+id/optionGroup"
        android:layout_width="122dp"
        android:layout_height="75dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:checkedButton="@+id/categoryOptionRadio"
        android:divider="@android:color/darker_gray"
        android:showDividers="middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/categoryInfo">

        <RadioButton
            android:id="@+id/categoryOptionRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category" />

        <RadioButton
            android:id="@+id/elementOptionRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elements"
            tools:layout_editor_absoluteX="33dp"
            tools:layout_editor_absoluteY="69dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/categoryInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="52dp"
        android:text="@string/category_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameCategoryText" />

    <EditText
        android:id="@+id/nameCategoryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText" tools:targetApi="o"/>

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/categor_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/templateSpinner"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/templateLabelCategory" />

    <TextView
        android:id="@+id/templateLabelCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/choose_template_element"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/optionGroup" />

</android.support.constraint.ConstraintLayout>